--- a/action.yml
+++ b/action.yml
@@ -7,4 +7,4 @@ inputs:
     default: 'idris2'
 runs:
   using: 'docker'
-  image: ${{ inputs.idris-version }}
+  image: ${{ github.inputs.idris-version }}
