--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,5 +9,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Run
         uses: ./ 
-      - name: Check
-        run: idris2 -v
+      - name: Check user
+        run: whoami
+      - name: Check idris
+        run: /root/.idris2/bin/idris2 -v
