--- a/action.yml
+++ b/action.yml
@@ -1,7 +1,23 @@
 name: 'Setup Idris 2'
 description: 'Install Idris 2'
+env: 
+  SCHEME: scheme
 runs:
   using: 'composite'
   steps:
-    - name: Run
-      run: ls
+    - name: Install dependencies
+      run: apt-get -y install build-essential clang chezscheme
+    - name: Checkout idris2 repository
+      uses: actions/checkout@3
+      with:
+        name: idris-lang/Idris2
+        path: idris2-source
+        ref: refs/tags/v0.3.0
+    - name: Build idris2
+      run: |
+        cd idris2-source
+        export PATH="${PATH}:/root/.idris2/bin"
+        make bootstrap
+        make install
+    - name: Put idris2 executable to path
+      run: echo 'export PATH="/root/.idris2/bin/:${PATH}"' >> "${HOME}/.bashrc"
