--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ runs:
       run: apt-get -y install build-essential clang chezscheme
       shell: bash
     - name: Checkout idris2 repository
-      uses: actions/checkout@3
+      uses: actions/checkout@v3
       with:
         name: idris-lang/Idris2
         path: idris2-source
