--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,10 @@
-name: 'Setup Idris 2'
-description: 'Install Idris 2'
+name: 'Setup Idris'
+description: 'Install Idris'
+inputs:
+  idris-version:  
+    description: 'Idris version (1 or 2)'
+    required: true
+    default: 2
 runs:
   using: 'composite'
   steps:
