--- a/action.yml
+++ b/action.yml
@@ -4,28 +4,14 @@ runs:
   using: 'composite'
   steps:
     - name: Install dependencies
-      run: sudo apt-get -y install build-essential clang chezscheme
+      run: sudo apt-get -y install chezscheme
       shell: bash
-    - name: Checkout idris2 repository
-      uses: actions/checkout@v3
-      with:
-        repository: idris-lang/Idris2
-        path: idris2-source
-        ref: v0.5.1
-    - name: Build idris2
+    - name: Download idris2
       run: |
-        cd idris2-source
-        export SCHEME=scheme
-        export PATH="${PATH}:~/.idris2/bin"
-        make bootstrap
-        make install
-      shell: bash
-    - name: Test idris2
-      run: ls ~/.idris2/bin/
-      shell: bash
-    - name: Test idris22
-      run: ~/.idris2/bin/idris2 -v
-      shell: bash
+        wget -O ./idris2-ubuntu.tar.gz https://github.com/sergeyshpadyrev/setup-idris-builds/releases/download/latest/idris2-ubuntu.tar.gz 
+        mkdir ~/.idris2
+        tar -xvf ./idris2-ubuntu.tar.gz -C ~/.idris2/bin
+        rm ./idris2-ubuntu.tar.gz
     - name: Put idris2 executable to path
       run: echo "$HOME/.idris2/bin/" >> $GITHUB_PATH
       shell: bash
