--- a/action.yml
+++ b/action.yml
@@ -12,6 +12,7 @@ runs:
         mkdir ~/.idris2
         tar -xvf ./idris2-ubuntu.tar.gz -C ~/.idris2/bin
         rm ./idris2-ubuntu.tar.gz
+      shell: bash
     - name: Put idris2 executable to path
       run: echo "$HOME/.idris2/bin/" >> $GITHUB_PATH
       shell: bash
