--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,7 +9,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Run
         uses: ./ 
-      - name: Check user
-        run: whoami
+      - name: Check folder
+        run: ls ~/.idris2/bin
       - name: Check idris
         run: idris2 -v
